--- a/frontend/details/navbar.html
+++ b/frontend/details/navbar.html
@@ -15,7 +15,9 @@
           </a>
         </button>
     {% else %}
+      {% if request.user.is_organiser %}
         <a href="/agents/" class="mr-5 hover:text-gray-900">Agentlar</a>
+      {% endif %}
         <a href="/leads/" class="mr-5 hover:text-gray-900">Mijozlar</a>
       </nav>
     {% endif %}
