--- a/frontend/registration/password_reset_form.html
+++ b/frontend/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} SUCRM - Login {% endblock %}
+{% block title %} SUCRM - Parolni tiklash {% endblock %}
 
 {% block content %}
     <form method="post">
@@ -8,8 +8,8 @@
         {% csrf_token %} 
         <br>
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button type="submit">Parolni tiklash</button>
         <hr>
-        <a href="{% url 'password_reset_view' %}">Parolni unitdingizmi?</a>
+        <a href="{% url 'login' %}">Login</a>
     </form>
 {% endblock %}
