--- a/frontend/registration/password_reset_complete.html
+++ b/frontend/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} SUCRM - Complate {% endblock %}
+{% block title %} SUCRM - Complete {% endblock %}
 
 {% block content %}
    <h1>Parol muvaffaqiyatli o'rnatilindi</h1>
